other-vpol/disallow-secrets-from-env-vars/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
  - name: mycontainer
    image: redis
    env:
    - name: SECRET_USERNAME
      valueFrom:
        secretKeyRef:
          name: mysecret
          key: username
    - name: SECRET_PASSWORD
      valueFrom:
        secretKeyRef:
          name: mysecret
          key: password
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: secret-ref-pod
spec:
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
    command: [ "/bin/sh", "-c", "env" ]
    envFrom:
    - secretRef:
        name: mysecret
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
    env:
    - name: ENV_VAR_1
      value: "value1"
    - name: ENV_VAR_2
      value: "value2"
    volumeMounts:
    - name: mysecret
      mountPath: /mnt/mysecret
  volumes:
  - name: mysecret
    secret:
      secretName: mysecret

---
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-init-pod
spec:
  initContainers:
  - name: init
    image: registry.k8s.io/busybox
    command: [ "/bin/sh", "-c", "env" ]
    env:
    - name: SECRET_PASSWORD
      valueFrom:
        secretKeyRef:
          name: mysecret
          key: password
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: secret-ref-init-pod
spec:
  initContainers:
  - name: init
    image: registry.k8s.io/busybox
    command: [ "/bin/sh", "-c", "env" ]
    envFrom:
    - secretRef:
        name: mysecret
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
  restartPolicy: Never
