other-vpol/disallow-secrets-from-env-vars/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata: {name: disallow-secrets-from-env-vars-exceptions}
policies: [../disallow-secrets-from-env-vars.yaml]
resources: [../.kyverno-test/resource.yaml]
exceptions: [exceptions.yaml]
results:
- {isValidatingPolicy: true, kind: Pod, policy: secrets-not-from-env-vars, resources: [default/secret-env-pod], result: pass}
- {isValidatingPolicy: true, kind: Pod, policy: secrets-not-from-env-vars, resources: [default/secret-ref-pod], result: fail}
- {isValidatingPolicy: true, kind: Pod, policy: secrets-not-from-env-vars, resources: [default/good-pod], result: pass}
